[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fib-pyrs = {path = "../fib-pyrs"}
fib-python = {path = "../fib-python"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.10.0"

[tool.poetry.scripts]
test = "benchmarks.main:run_tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
