[package]
name = "fib_pyrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fib-rust = {path = "../fib-rust" }

# Not possible to create with cargo commands, but could use Python maturin package
# to do maturin new -b pyo3.. still would need to edit Cargo.toml manually to add features
[dependencies.pyo3]
version = "0.17.2"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["extension-module", "abi3-py37"]