[package]
name = "fib_pyrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fib-rust = {path = "../fib-rust" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
pyo3 = { version = "0.17.3", features = ["num-bigint", "extension-module"] }
