[tool.poetry]
name = "fib-pyrs"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^0.13.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
